# echo-word

./: LICENSE  README.md  echo-word.cabal  stack.yaml
app/: Main.hs
src/: Parse.hs  Utils.hs
test/: ParseSpec.hs
