name:                echo-word
version:             0.1.0.0
synopsis:            a simple program that displays a random verse(s) from user specified source of Bible texts
description:         Please see README.md
homepage:            http://github.com/qoelet/echo-word#readme
license:             BSD3
license-file:        LICENSE
author:              Kenny Shen
maintainer:          kenny@machinesung.com
copyright:           2015 Kenny Shen
category:            Application
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable echo-word
  hs-source-dirs:      app
                     , src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
                     , filepath
                     , getopt-generics == 0.12
                     , parsec
                     , random
                     , random-shuffle
                     , safe
                     , text
  other-modules:       Parse
                     , Utils
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
                     , test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , parsec
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Parse
                     , ParseSpec
                     , Utils
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/qoelet/echo-word
